--- a/assets/styles/pages/_projects.sass
+++ b/assets/styles/pages/_projects.sass
@@ -3,7 +3,7 @@
     margin: 0
     margin-bottom: 60px
     text-align: center
-    font-size: 46px
+    font-size: 38px
     font-weight: 700
     text-transform: uppercase
     line-height: 1
@@ -21,7 +21,7 @@
 
   &__title
     font-size: 24px
-    line-height: 1.1
+    line-height: 1.2
 
   &__ref
     font-size: 0
